--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 </head>
 <body>
 	<main>
-		<div class="intro">Hello, Pierre-André!</div>
-		<div class="tagline">Junior Web Developer | Code Addict | Unix starter | Enjoy</div>
+		<div class="intro">Hello, Pierre-André !</div>
+		<div class="tagline">Junior Web Developer | Code Addict | Unix starter | Fun</div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
 			<a target="_blank" href="https://github.com/flexdinesh"><i class="fab fa-github"></i></a>
