--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 <body>
 	<main>
 		<div class="intro">Hello, I'm Pierre-André !</div>
-		<div class="tagline">Junior Web Developer | Code Addict | Unix starter | Fun</div>
+		<div class="tagline">Junior Web Developer | Code Addict | Unix Starter | Fun</div>
 
 		<div class="icons-social">
-			<a target="icons-social" href="https://github.com/Pierreandredebournonville"> <i class="fab fa-github"></i></a>
+			<a target="_blank" href="https://github.com/Pierreandredebournonville"><i class="fab fa-github"></i></a>
 			<a target="_blank" href="https://twitter.com/flexdinesh"><i class="fab fa-twitter"></i></a>
 			<a target="_blank" href="https://stackoverflow.com/story/flexdinesh"><i class="fab fa-stack-overflow"></i></a>
 			<a target="_blank" href="https://www.linkedin.com/in/dineshpandiyan"><i class="fab fa-linkedin"></i></a>
